Fix title overlapping with shuffle button

--- a/src/css/Controls.scss
+++ b/src/css/Controls.scss
@@ -61,7 +61,7 @@
     font-family: system-ui;
     margin-left: 140px;
     left: 0;
-    width: 30%;
+    width: 25%;
     margin-top: -10px;
 
     h3 {
